# zarr

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
benches/: parallel_write.rs  simple.rs
src/: chunk.rs  data_type.rs  filesystem.rs  lib.rs  ndarray.rs  prelude.rs  storage.rs  store.rs  tests.rs
src/compression/: blosc.rs  bzip.rs  gzip.rs  lz.rs  lz_pure.rs  mod.rs  raw.rs  xz.rs
src/store/: filesystem.rs
tests/: integration_test.rs  ndarray.rs  zarrita_compat.rs
tests/data/zarrita.zr3/data/root/seq/i2/c0/0/: 0  1
tests/data/zarrita.zr3/data/root/seq/i2/c0/1/: 0  1
tests/data/zarrita.zr3/data/root/seq/i2/c1/0/: 0  1
tests/data/zarrita.zr3/data/root/seq/i2/c1/1/: 0  1
tests/data/zarrita.zr3/meta/root/seq/: i2.array.json
