[package]
name = "zarr"
version = "0.0.1"
edition = "2018"
license = "MIT/Apache-2.0"
authors = ["Andrew Champion <andrew.champion@gmail.com>"]
description = "Rust implementation of the Zarr tensor file system format"
readme = "README.md"
repository = "https://github.com/aschampion/rust-zarr"
keywords = ["tensor"]
categories = ["encoding", "filesystem", "science"]

[features]
default = ["bzip", "filesystem", "gzip", "lz", "use_ndarray", "xz"]

bzip = ["bzip2"]
filesystem = ["fs2", "walkdir"]
gzip = ["flate2"]
lz = ["lz4"]
lz_pure = ["lz-fear"]
use_ndarray = ["itertools", "ndarray", "num-traits"]
xz = ["xz2"]

[dependencies]
byteorder = "1.3.4"
semver = "0.9"
serde_json = "1.0.39"
thiserror = "1"

bzip2 = { version = "0.4", optional = true }
flate2 = { version = "1.0.16", optional = true }
fs2 = { version = "0.4", optional = true }
half = { version = "1.6", features = ["serde", "std"] }
itertools = { version = "0.8", optional = true }
lz4 = { version = "1.23", optional = true }
lz-fear = { version = "0.1.1", optional = true }
ndarray = { version = "0.13", optional = true }
num-traits = { version = "0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1", features = ["serde"] }
walkdir = { version = "2", optional = true }
xz2 = { version = "0.1", optional = true }

[dev-dependencies]
bencher = "0.1.5"
doc-comment = "0.3"
futures = "0.1"
futures-cpupool = "0.1.8"
lazy_static = "1.4"
rand = "0.7"
rayon = "1"
tempdir = "0.3"
tiff = "0.3"

[profile.release]
lto = true

[profile.bench]
lto = true
